<resources>
    <string name="app_name">Codeblock</string>
    <string name="main_label">CODEBLOCK</string>
    <string name="imageDescription">main_image</string>

    <string name="mainMenu_newProject">Начать проект</string>
    <string name="mainMenu_about">Авторы</string>
    <string name="mainMenu_exit">Выход</string>

    <string name="label_team">Авторы - TEAM 17</string>
    <string name="label_nikita">Абрамов\n Никита</string>
    <string name="label_stepan">Устименко\n Степан</string>
    <string name="label_alexander">Юраев\n Александр</string>

    <string name="menu_run">Запустить проект</string>
    <string name="menu_save">Сохранить проект</string>
    <string name="menu_console">Открыть консоль</string>

    <string name="console">Консоль</string>

    <string name="type">Тип</string>
    <string name="status">Статус</string>
    <string name="expression_one">Выражение 1</string>
    <string name="expression_two">Выражение 2</string>
    <string name="name">Название</string>
    <string name="names">Название 1, Название 2</string>
    <string name="name_var">Название переменной</string>
    <string name="value">Значение</string>
    <string name="message">Сообщение</string>
    <string name="expression">Выражение</string>
    <string name="sizeArray">Размер</string>


    <string name="block_begin">begin</string>
    <string name="block_end">end</string>
    <string name="block_else">else</string>

    <string name="blockMenu_defined_var">def var</string>
    <string name="blockMenu_undefined_var">undef var</string>
    <string name="blockMenu_defined_array">def arr</string>
    <string name="blockMenu_undefined_array">undef arr</string>
    <string name="blockMenu_assignment">add val</string>
    <string name="blockMenu_condition_if">if</string>
    <string name="blockMenu_condition_if_else">if-else</string>
    <string name="blockMenu_cycle_while">while</string>
    <string name="blockMenu_console_output">output</string>
    <string name="blockMenu_console_input_one">input</string>


    <string-array name="thins">
        <item>>=</item>
        <item>></item>
        <item>==</item>
        <item>!=</item>
    </string-array>
</resources>