<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/mainLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.21" />

    <Button
        android:id="@+id/buttonCreateNewProject"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/mainMenu_newProject"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainLabel"
        app:layout_constraintVertical_bias="0.313" />

    <Button
        android:id="@+id/buttonAboutAuthors"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/mainMenu_about"
        app:layout_constraintBottom_toTopOf="@+id/buttonExitApp"
        app:layout_constraintEnd_toEndOf="@+id/buttonCreateNewProject"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/buttonCreateNewProject"
        app:layout_constraintTop_toBottomOf="@+id/buttonCreateNewProject"
        app:layout_constraintVertical_bias="0.16" />

    <Button
        android:id="@+id/buttonExitApp"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/mainMenu_exit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/buttonAboutAuthors"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/buttonAboutAuthors"
        app:layout_constraintTop_toBottomOf="@+id/buttonCreateNewProject"
        app:layout_constraintVertical_bias="0.858" />

</androidx.constraintlayout.widget.ConstraintLayout>